--- a/g_three_architects.html
+++ b/g_three_architects.html
@@ -6,9 +6,11 @@
     <title>G_Three_Architects</title>
     <link rel="stylesheet" href="g3.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
     </header>
     <main>
 
