--- a/g_three_architects.html
+++ b/g_three_architects.html
@@ -7,16 +7,124 @@
     <link rel="stylesheet" href="g3.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navbar">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
-        </nav>
+            <ul class="nav-links display-flex">                                       
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+            </ul>
+        </nav> 
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-desdcription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="image_s/banner.png" alt="" class="banner-img">
+        </div>
     </header>
     <main>
+        <!-- team section -->
+        <section class="teams  display-flex">
+            <div class="team-img-container">
+                <img src="image_s/team1.png" alt="Two Architects">
+                <img src="image_s/team2.png" alt="There Architects">
+                <img src="image_s/team3.png" alt="Two Architects">
+                <img src="image_s/team4.png" alt="Two Architects">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title Section-title"><span id="quick-list" class="text-lightgray">Quick list</span> <span id="of-our">of Our</span>  <span id="features" class="text-primary">Features</span></h3>
+                <p class="feature-description text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <!-- team section2 -->
+        <section class="features display-flex">
+            <div>
+                <h3 id="id" class="Section-title">Features you will <br> love & enjoy</h3>
+                <p class="descrition text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <!-- f card container -->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Drag & Drop Builder</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                 </div>
+            </div>
+            <div class="feature-architect">
+                <img src="image_s/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+years</span><br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
 
+        <section>
+            <h3 class="Section-title">Some Facts</h3>
+            <p class="text-lightgray fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="image_s/icons/ribon.png" alt="">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name text-lightgray">Award Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="image_s/icons/projects.png" alt="">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name text-lightgray">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="image_s/icons/customers.png" alt="">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name text-lightgray">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="image_s/icons/email.png" alt="">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name text-lightgray">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section class="our-sponsor">
+           <div class="Sponspor-info">
+             <h3 class="Section-title">Our Sponspors</h3>
+             <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+           </div>
+           <div class="sponsor-companies">
+            <img src="image_s/sponsors/spotify.png" alt="">
+            <img src="image_s/sponsors/google.png" alt="">
+            <img src="image_s/sponsors/amazon.png" alt="">
+            <img src="image_s/sponsors/telerama.png" alt="">
+            <img src="image_s/sponsors/figma.png" alt="">
+           </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer bg-light">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
